--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <p><h3><i>About Me</i></h3>
               <p><a href= "about_me.html">Link to About Me</a></p>
               <p><h3><i>My Favorite Brunch Menu</i></h3>
-              <p><a href= "Homework_1/Homework_1.html">Link to Assignment 1</a></p>
+              <p><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></p>
               <p><h3><i>Dummy 1</i></h3><p>
               <p><a href= "#">Link to Dummy1</a></p>
               <p><h3><i>Dummy 2</i></h3><p>
