--- a/assignment_1/Homework_1.html
+++ b/assignment_1/Homework_1.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
       
-<html>    <head>
-        <title> My Favorite Brunch Menu </title>
-</head>
+<html>  
+  <head>
     <meta charset="UTF-8">
-        <meta name="description" content="A menu for your favorite restaurant">
-        <meta name="keywords" content="menu">
-        <meta name="author" content="Winnie Wong">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A menu for your favorite restaurant">
+    <meta name="keywords" content="menu">
+    <meta name="author" content="Winnie Wong">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> My Favorite Brunch Menu </title>
+  </head>
         <style>
   body {background-color: powderblue;}
   h1 {color: red;}
@@ -16,7 +17,7 @@
     <body>
 <center><h1>Indigo Brunch Menu</h1></center>
 <h2><b>Benedicts</b></h2>
-<h5><u><font color=brown>Served with potatoes or sub fruit</u><font color=black></h5>
+      <h5><u><font color=brown>Served with potatoes or sub fruit</font></u></h5>
 <h3><i>Classic</i></h3><br>  
 With ham and traditional hollandaise<br>
 <h3><i>Fried Chicken</i></h3><br>   
@@ -25,8 +26,10 @@ Homemade fried chicken topped with your choice of hollandaise or country gravy
 With house applewood smoked salmon hollandaise<br>
 <h3><i>Avocado Roma</i></h3><br>
 Avocado a slice of Roma tomato hollandaise<br>
-        <p><a href= "http://menus.indigowa.com/brunch/"><h4>Read More<h4></a><p>
+      <p><a href= "http://menus.indigowa.com/brunch/"><h4>Read More</h4></a></p>
         <p><a href="https://www.tastingtable.com/cook/recipes/eggs-benedict-recipe-breakfast">Benedicts</a></p>
  <img src="Images/Non-Feature-eggs-benedict-recipe-breakfast1.jpg"> 
   
+  </body>
 </html>
+
