--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
           <div style="text-align:center"><h1>Winnie Wong's Portfolio</h1></div> 
             <header>
               <p><h3><i>About Me</i></h3>
-              <p><a href= "about_me.html">Link to About Me</a></p>
+              <nav><p><a href= "about_me.html">Link to About Me</a></p></nav>
               <p><h3><i>My Favorite Brunch Menu</i></h3>
-              <p><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></p>
+              <nav><p><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></p></nav>
               <p><h3><i>Dummy 1</i></h3><p>
-              <p><a href= "#">Link to Dummy1</a></p>
+              <nav><p><a href= "#">Link to Dummy1</a></p></nav>
               <p><h3><i>Dummy 2</i></h3><p>
-              <p><a href= "#">Link to Dummy2</a></p>
+              <nav><p><a href= "#">Link to Dummy2</a></p></nav>
               <p><h3><i>Dummy 3</i></h3><p>
-              <p><a href= "#">Link to Dummy3</a></p>
+              <nav><p><a href= "#">Link to Dummy3</a></p></nav>
           </header>
           <Footer><h5>The End</h5></Footer>
         </article>  
