--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
   <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <style>
- body {background-color: beige;}
-  h1 {color: navy;}
-  h3 {color: brown;}
-  p {color: lightcoral;}
-  </style>
+ <link rel="stylesheet" type="text/css" href="styles/my_frist_stylesheet.css">
   <title> Winnie Wong's Portfolio </title>
 </head>  
     <body>
         <article>
           <div style="text-align:center"><h1>Winnie Wong's Portfolio</h1></div> 
             <header>
-              <p><h3><i>About Me</i></h3>
+              <h3><i>About Me</i></h3>
               <nav><p><a href= "about_me.html">Link to About Me</a></p></nav>
-              <p><h3><i>My Favorite Brunch Menu</i></h3>
+              <h3><i>My Favorite Brunch Menu</i></h3>
               <nav><p><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></p></nav>
-              <p><h3><i>Dummy 1</i></h3><p>
+              <h3><i>Dummy 1</i></h3>
               <nav><p><a href= "#">Link to Dummy1</a></p></nav>
-              <p><h3><i>Dummy 2</i></h3><p>
+              <h3><i>Dummy 2</i></h3>
               <nav><p><a href= "#">Link to Dummy2</a></p></nav>
-              <p><h3><i>Dummy 3</i></h3><p>
+              <h3><i>Dummy 3</i></h3>
               <nav><p><a href= "#">Link to Dummy3</a></p></nav>
           </header>
-          <Footer><h5>The End</h5></Footer>
-        </article>  
+        </article>
+      <footer><h5>The End</h5></footer>
     </body>
 </html>
