--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
-  <html lang="en">
-<head>
-  <meta charset="UTF-8">
- <link rel="stylesheet" type="text/css" href="styles/my_frist_stylesheet.css">
-  <title> Winnie Wong's Portfolio </title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href=https://necolas.github.io/normalize.css/8.0.0/normalize.css>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gamja+Flower">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles/my_frist_stylesheet.css">
+    <title> Winnie Wong's Portfolio </title>
 </head>  
-    <body>
-        <article>
-          <div style="text-align:center"><h1>Winnie Wong's Portfolio</h1></div> 
-            <header>
-              <h3><i>About Me</i></h3>
-              <nav><p><a href= "about_me.html">Link to About Me</a></p></nav>
-              <h3><i>My Favorite Brunch Menu</i></h3>
-              <nav><p><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></p></nav>
-              <h3><i>Dummy 1</i></h3>
-              <nav><p><a href= "#">Link to Dummy1</a></p></nav>
-              <h3><i>Dummy 2</i></h3>
-              <nav><p><a href= "#">Link to Dummy2</a></p></nav>
-              <h3><i>Dummy 3</i></h3>
-              <nav><p><a href= "#">Link to Dummy3</a></p></nav>
-          </header>
-        </article>
-      <footer><h5>The End</h5></footer>
-    </body>
+<body>
+  <header>
+    <div class="head">
+    <img class="line" src="images/images.jpeg" alt="header">
+    <h1 class="word">Winnie Wong's Portfolio</h1>
+      <i class="fas fa-anchor fa-3x" ></i>
+      </div>
+    <div class ="me"><nav><a href= "about_me.html">About Me</a></nav></div>
+  </header>
+    <div class= "side">
+    <article>
+      <h2>My Favorite Brunch Menu</h2>
+      <nav><a href= "assignment_1/Homework_1.html">Link to Assignment 1</a></nav>
+      <h2>Kitty To Go!</h2>
+      <nav><a href= "https://winniew55.github.io/mockup-practice/">Link to Mockup</a></nav>
+      <h2>Travel Plan</h2>
+      <nav><a href=travel.html>Link to Travel</a></nav>
+      <h2>Dummy 1</h2>
+      <nav><a href= "#">Link to Dummy1</a></nav>
+      <h2>Dummy 2</h2>
+      <nav><a href= "#">Link to Dummy2</a></nav>
+    </article>
+      <aside>
+      <img class="min" src="images/20140618_170632994_iOS.jpg" alt="minions">
+      </aside>
+    </div>
+  <footer>
+      <i class="far fa-arrow-alt-circle-up"></i>
+      <nav class=back><a href="index.html">Back to the top</a></nav>
+  </footer>
+  </body>
 </html>
